Print Nuget folder before pack

--- a/.ado/libNode/publish.yml
+++ b/.ado/libNode/publish.yml
@@ -132,6 +132,8 @@ jobs:
           contents: |
             *.targets
 
+      - script: dir $(Build.StagingDirectory)/build/nuget /s
+
       - task: PowerShell@2
         inputs:
           targetType: 'inline'
