--- a/.ado/libNode/Microsoft.JavaScript.LibNode.nuspec
+++ b/.ado/libNode/Microsoft.JavaScript.LibNode.nuspec
@@ -12,10 +12,8 @@
     <tags>native library node.js node</tags>
   </metadata>
   <files>
-    <file src="$nugetroot$\build\native\win-x64\**\*.*"
-          target="build\native\win-x64"
-          exclude="**\*.manifest;**\*.iobj;**\*.ipdb;**\*.pdb;**\*.exp;**\*.ilk" />
-
+    <file src="$nugetroot$\build\native\win-x64\libnode.dll"
+          target="build\native\win-x64\libnode.dll" />
     <file src="$nugetroot$\build\native\Microsoft.JavaScript.LibNode.targets"
           target="build\native\Microsoft.JavaScript.LibNode.targets" />
     <file src="$nugetroot$\NOTICE.txt"
