API doc improvements

--- a/docs2/package.json
+++ b/docs2/package.json
@@ -5,8 +5,8 @@
     "vitepress": "1.1"
   },
   "scripts": {
-    "dotnet-api": "node ./tools/build-dotnet-api-docs.js",
-    "js-api": "node ./tools/build-js-api-docs.js",
+    "build-dotnet": "node ./tools/build-dotnet-api-docs.js",
+    "build-js": "node ./tools/build-js-api-docs.js",
     "dev": "vitepress dev",
     "build": "vitepress build",
     "preview": "vitepress preview"
